Added probabilities for all events listed in exercise. Added nice, formatted input. Added code to Jupyter Notebook for exercise 1

--- a/lab06/125689_Wiśnios_Marcin_Bayess_Zadania.ipynb
+++ b/lab06/125689_Wiśnios_Marcin_Bayess_Zadania.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -107,13 +107,77 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sequential sampling (1 chains in 1 job)\n",
+      "BinaryGibbsMetropolis: [zabil, odciski, alibi, motyw, widziany, rysopis]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████| 20500/20500 [00:13<00:00, 1481.21it/s]\n",
+      "Only one chain was sampled, this makes it impossible to run some convergence checks\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fakty:                                             Prawdopodobieństwo popełnienia przestępstwa\n",
+      "- znaleziono odciski podejrzanego:                 0.7027594481103779\n",
+      "- podejrzany miał motyw i nie miał alibi:          0.8012507817385867\n",
+      "- znaleziono odciski palców podejrzanego,\n",
+      "  podejrzany był widziany w okolicy miejsca\n",
+      "  zamierszkania handlarza bronią, ale otrzymany\n",
+      "  rysopis zabójcy nie pasuje do podejrzanego       0.49381912817176316\n"
+     ]
+    }
+   ],
    "source": [
     "import pymc3 as pm\n",
-    "import numpy as np\n",
+    "# import numpy as np\n",
+    "# import matplotlib.pyplot as plt\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "with pm.Model() as Bayes_model:\n",
+    "    # zmienna mówiąca czy podejrzany jest winny, o rozkładzie Bernoulliego z prawd. 0.5\n",
+    "    zabil = pm.Bernoulli('zabil', 0.5)\n",
+    "\n",
+    "    # prawdopodobieństwo znalezienia odcisków palców podejrzanego pod warunkiem że zabił\n",
+    "    p_odciski = pm.Deterministic(\"p_odciski\", pm.math.switch(zabil, 0.7, 0.3))\n",
+    "    odciski = pm.Bernoulli(\"odciski\", p_odciski)\n",
+    "\n",
+    "    p_alibi = pm.Deterministic(\"p_alibi\", pm.math.switch(zabil, 0.8, 0.4))\n",
+    "    alibi = pm.Bernoulli(\"alibi\", p_alibi)\n",
+    "\n",
+    "    p_motyw = pm.Deterministic(\"p_motyw\", pm.math.switch(zabil, 0.9, 0.5))\n",
+    "    motyw = pm.Bernoulli(\"motyw\", p_alibi)\n",
+    "\n",
+    "    p_widziany = pm.Deterministic(\"p_widziany\", pm.math.switch(zabil, 0.4, 0.2))\n",
+    "    widziany = pm.Bernoulli(\"widziany\", p_alibi)\n",
+    "\n",
+    "    p_rysopis = pm.Deterministic(\"p_rysopis\", pm.math.switch(zabil, 0.2, 0.4))\n",
+    "    rysopis = pm.Bernoulli(\"rysopis\", p_rysopis)\n",
+    "\n",
+    "with Bayes_model:\n",
+    "    trace = pm.sample(20000, chains=1)\n",
+    "\n",
+    "print(\"{:<50}\".format(\"Fakty:\"), \"Prawdopodobieństwo popełnienia przestępstwa\")\n",
+    "\n",
+    "# prawdopodobieństwo popełnienia zbrodni pod warunkiem że znaleziono odciski palcow\n",
+    "p_zabil_odciski = (trace['zabil']*trace['odciski']).sum()/trace['odciski'].sum()\n",
+    "print(\"{:<50}\".format(\"- znaleziono odciski podejrzanego:\"), p_zabil_odciski)\n",
+    "\n",
+    "# prawdopodobieństwo popełnienia zbrodni pod warunkiem że podejrzany nie ma alibi i miał motyw\n",
+    "p_alibi_motyw = (trace['zabil'] * trace['alibi'] * trace['motyw']).sum() / (trace['alibi'] * trace['motyw']).sum()\n",
+    "print(\"{:<50}\".format(\"- podejrzany miał motyw i nie miał alibi:\"), p_alibi_motyw)\n",
+    "\n",
+    "# prawdopodobieństwo popełnienia zbrodni pod warunkiem że znaleziono odciski palców, podejrzany był widziany\n",
+    "# w okolicy miejsca zamierszkania handlarza bronią, ale otrzymany rysopis zabójcy nie pasuje do podejrzanego\n",
+    "p_odciski_widziany_rysopis = (trace['zabil'] * trace['widziany'] * trace['rysopis']).sum() / (trace['widziany']\n",
+    "                                                                                              * trace['rysopis']).sum()\n",
+    "print(\"{:<50}\".format(\"- znaleziono odciski palców podejrzanego,\\n  podejrzany był widziany w okolicy miejsca\\n\"\n",
+    "      \"  zamierszkania handlarza bronią, ale otrzymany\"))\n",
+    "print(\"{:<50}\".format(\"  rysopis zabójcy nie pasuje do podejrzanego\"), p_odciski_widziany_rysopis)\n",
+    "\n"
    ]
   },
   {
