Hotfix for zad.1 ad. 3

--- a/lab06/125689_Wiśnios_Marcin_Bayess_Zadania.ipynb
+++ b/lab06/125689_Wiśnios_Marcin_Bayess_Zadania.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -114,7 +114,7 @@
      "text": [
       "Sequential sampling (1 chains in 1 job)\n",
       "BinaryGibbsMetropolis: [zabil, odciski, alibi, motyw, widziany, rysopis]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████| 20500/20500 [00:13<00:00, 1481.21it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████| 20500/20500 [00:11<00:00, 1816.83it/s]\n",
       "Only one chain was sampled, this makes it impossible to run some convergence checks\n"
      ]
     },
@@ -123,12 +123,12 @@
      "output_type": "stream",
      "text": [
       "Fakty:                                             Prawdopodobieństwo popełnienia przestępstwa\n",
-      "- znaleziono odciski podejrzanego:                 0.7027594481103779\n",
-      "- podejrzany miał motyw i nie miał alibi:          0.8012507817385867\n",
+      "- znaleziono odciski podejrzanego:                 0.7014331210191083\n",
+      "- podejrzany miał motyw i nie miał alibi:          0.7993773349937734\n",
       "- znaleziono odciski palców podejrzanego,\n",
       "  podejrzany był widziany w okolicy miejsca\n",
       "  zamierszkania handlarza bronią, ale otrzymany\n",
-      "  rysopis zabójcy nie pasuje do podejrzanego       0.49381912817176316\n"
+      "  rysopis zabójcy nie pasuje do podejrzanego       0.7024029574861368\n"
      ]
     }
    ],
@@ -172,8 +172,8 @@
     "\n",
     "# prawdopodobieństwo popełnienia zbrodni pod warunkiem że znaleziono odciski palców, podejrzany był widziany\n",
     "# w okolicy miejsca zamierszkania handlarza bronią, ale otrzymany rysopis zabójcy nie pasuje do podejrzanego\n",
-    "p_odciski_widziany_rysopis = (trace['zabil'] * trace['widziany'] * trace['rysopis']).sum() / (trace['widziany']\n",
-    "                                                                                              * trace['rysopis']).sum()\n",
+    "p_odciski_widziany_rysopis = (trace['zabil'] * trace['odciski'] * trace['widziany'] * trace['rysopis']).sum() / \\\n",
+    "                             (trace['odciski'] * trace['widziany'] * trace['rysopis']).sum()\n",
     "print(\"{:<50}\".format(\"- znaleziono odciski palców podejrzanego,\\n  podejrzany był widziany w okolicy miejsca\\n\"\n",
     "      \"  zamierszkania handlarza bronią, ale otrzymany\"))\n",
     "print(\"{:<50}\".format(\"  rysopis zabójcy nie pasuje do podejrzanego\"), p_odciski_widziany_rysopis)\n",
