Hotfix for zad.2 ad. 4

--- a/lab06/125689_Wiśnios_Marcin_Bayess_Zadania.ipynb
+++ b/lab06/125689_Wiśnios_Marcin_Bayess_Zadania.ipynb
@@ -284,10 +284,48 @@
    "outputs": [],
    "source": [
     "import pymc3 as pm\n",
-    "import numpy as np\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "with pm.Model() as model:\n",
+    "    # variables telling about possibility of burglary and earthquake\n",
+    "    burglary = pm.Bernoulli('burglary', .001)\n",
+    "    earthquake = pm.Bernoulli('earthquake', .002)\n",
+    "\n",
+    "    # Probability of alarm\n",
+    "    p_alarm = pm.Deterministic('p_alarm', pm.math.switch(burglary, pm.math.switch(earthquake, .95, .94),\n",
+    "                                                         pm.math.switch(earthquake, .29, .001)))\n",
+    "    alarm = pm.Bernoulli('alarm', p_alarm)\n",
+    "\n",
+    "    # Probability of John calling during alarm\n",
+    "    p_john = pm.Deterministic('p_john', pm.math.switch(alarm, .9, .05))\n",
+    "    john = pm.Bernoulli('john', p_john)\n",
+    "\n",
+    "    p_mary = pm.Deterministic('p_mary', pm.math.switch(alarm, .7, .01))\n",
+    "    mary = pm.Bernoulli('mary', p_mary)\n",
+    "\n",
+    "\n",
+    "with model:\n",
+    "    trace = pm.sample(20000, chains=1)\n",
+    "\n",
+    "    # print(\"{:<50}\".format(\"Fakty:\"), \"Prawdopodobieństwo popełnienia przestępstwa\")\n",
+    "\n",
+    "    # 1. Probability of alarm\n",
+    "    p_alarm = (trace['alarm'].sum()/len(trace['alarm']))\n",
+    "    print(\"1. Prawdopodobieństwo wystąpienia alarmu:\", p_alarm)\n",
+    "\n",
+    "    # 2. Probability of burglary under condition of alarm\n",
+    "    p_burglary_alarm = (trace['burglary'] * trace['alarm']).sum() / trace['alarm'].sum()\n",
+    "    print(\"2. Prawdopodobieństwo włamania jeśli włączył się alarm:\", p_burglary_alarm)\n",
+    "\n",
+    "    # 3. Probability of earthquake if alarm\n",
+    "    p_earthquake_alarm = (trace['earthquake'] * trace['alarm']).sum() / trace['alarm'].sum()\n",
+    "    print(\"3. Prawdopodobieństwo trzęsienia ziemi jeśli włączył się alarm:\", p_earthquake_alarm)\n",
+    "\n",
+    "    # 4. Probability of someone calling during burglary\n",
+    "    MandJCall = (trace['burglary'] * trace['john'] * trace['mary']).sum() / trace['burglary'].sum()\n",
+    "    MCalls = (trace['burglary'] * trace['mary']).sum() / trace['burglary'].sum()\n",
+    "    JCalls = (trace['burglary'] * trace[\"john\"]).sum() / trace['burglary'].sum()\n",
+    "    print(\"4. Prawdopodobieństwo że ktoś zadzwoni w czasie włamania:\", JCalls + MCalls - MandJCall)\n",
+    "\n"
    ]
   },
   {
