Added text answers

--- a/lab06/125689_Wiśnios_Marcin_Bayess_Zadania.ipynb
+++ b/lab06/125689_Wiśnios_Marcin_Bayess_Zadania.ipynb
@@ -213,7 +213,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "2. Gdyby stwierdzono, że nie miał alibi i miał motyw."
    ]
   },
   {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -281,7 +281,28 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sequential sampling (1 chains in 1 job)\n",
+      "BinaryGibbsMetropolis: [burglary, earthquake, alarm, john, mary]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████| 20500/20500 [00:08<00:00, 2359.91it/s]\n",
+      "Only one chain was sampled, this makes it impossible to run some convergence checks\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Prawdopodobieństwo wystąpienia alarmu: 0.0031\n",
+      "2. Prawdopodobieństwo włamania jeśli włączył się alarm: 0.3870967741935484\n",
+      "3. Prawdopodobieństwo trzęsienia ziemi jeśli włączył się alarm: 0.1935483870967742\n",
+      "4. Prawdopodobieństwo że ktoś zadzwoni w czasie włamania: 0.9600000000000001\n"
+     ]
+    }
+   ],
    "source": [
     "import pymc3 as pm\n",
     "\n",
@@ -361,7 +382,10 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "1. Prawdopodobieństwo wystąpienia alarmu: 0.31%\n",
+    "2. Prawdopodobieństwo włamania jeśli włączył się alarm: 38.70967741935484%\n",
+    "3. Prawdopodobieństwo trzęsienia ziemi jeśli włączył się alarm: 19.35483870967742%\n",
+    "4. Prawdopodobieństwo że ktoś zadzwoni w czasie włamania: 96.00000000000001%"
    ]
   },
   {
