--- a/lab08/Gen_Lab_1.ipynb
+++ b/lab08/Gen_Lab_1.ipynb
@@ -167,9 +167,12 @@
    "outputs": [],
    "source": [
     "def gen_population(P, N, B):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return pop"
+    "    population = np.ndarray(shape=(N, P * B), dtype=\"int\")\n",
+    "    for i in range(P):\n",
+    "        for j in range(B * N):\n",
+    "            population[i][j] = np.random.randint(0, 2)\n",
+    "            \n",
+    "    return population"
    ]
   },
   {
